--- a/internal/testdata/config.ini
+++ b/internal/testdata/config.ini
@@ -1,9 +1,11 @@
 app_name = 日志收集处理
+secret = "secret"
+expires_time = 86400
 [mongodb]
 host = 127.0.0.1
 port = 27017
 database = log
-username = jinxing.liu
+username =
 password =
 [log.laravel]
 path = /var/log/laravel.log
