--- a/web/.gitignore
+++ b/web/.gitignore
@@ -9,8 +9,9 @@ lerna-debug.log*
 pnpm-lock.yaml
 
 node_modules
-dist-ssr
+dist
 *.local
+.env.production
 
 # Editor directories and files
 .vscode/*
