--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "@element-plus/icons-vue": "^1.1.4",
     "@vueuse/core": "^8.4.2",
     "element-plus": "^2.1.11",
+    "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "sass": "^1.51.0",
     "vue": "^3.2.25",
@@ -18,11 +19,13 @@
     "vue-router": "^4.0.15"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/node": "^18.0.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "ali-oss": "^6.17.1",
     "dotenv": "^16.0.1",
     "ftp": "^0.3.10",
+    "i": "^0.3.7",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
     "vue-tsc": "^0.34.7"
